# jacob-heff.github.io

./: .gitignore  CNAME.example  LICENSE  Project One Unity.html  README.md  WAG Jam.html  _config.yml  index.html  robots.txt  sitemap.xml
MyLoginApp/app/: build.gradle
MyLoginApp/nft-preview-card-component-main/: index(2).html  index.html  stylesheet.css
Personal Programs/ATM/: ATM.cpp  ATM.sln  ATM.vcxproj
Personal Programs/BlogProject/: index.html
Personal Programs/ComicCollector/: ComicCollector.cpp  ComicCollector.sln  ComicCollector.vcxproj  ComicCollector.vcxproj.filters
Personal Programs/GUI Test/: CMakeLists.txt  GUI Test.cpp  GUI Test.h
Personal Programs/LoginRegisterSystem/: LoginRegisterSystem.cpp  LoginRegisterSystem.sln  LoginRegisterSystem.vcxproj  (+1 more)
Portfolio/: index.html
Wag-Jam/: index.html  manifest.json  pwa_catalog.json  service-worker.js
css/: bootstrap.css  styles.css  stylesheet.css  templatemo-style.css
csv_viewer/: csv_viewer.html  index.html
flip-the-coin-master/: index.html
js/: main.js  myScript.js
man_hour_counter/: README.md  index.html  other_files  vendor
new-site/: index.html
projectoneunity/: index.html  manifest.json  pwa_catalog.json  service-worker.js
python-comics/: comics.py
task-manager-app-master/: .htaccess  README.md  README_template.md  SERVER_CONFIG.md  _headers  browserconfig.xml  index.html  index.prod.html  manifest.json  robots.txt  sitemap.xml  styles.css  sw.js  test-filters.html  test.html
virtualis_res/: 26fest.html  about.html  archive.html  home.html  index.html  news.html  signup.html
(+110 files in other folders)
