# CMakeList.txt : CMake project for GUI Test, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("GUI Test")

# Add source to this project's executable.
add_executable (CMakeTarget "GUI Test.cpp" "GUI Test.h")

# TODO: Add tests and install targets if needed.
